<resources>
    <string name="app_name">Re-USE</string>
    <string name="title_home">Home</string>
    <string name="title_denuncia">Denúncia</string>
    <string name="title_coleta_seletiva">Solicitação de Coleta</string>
    <string name="title_pesquisar">Pesquisar</string>
    <string name="title_chat">Chat</string>
    <string name="title_login">Login</string>
    <string name="title_usuario">Usuario</string>
    <string name="title_login_usuario">Login Usuário</string>
    <string name="title_cadastro_usuario">Cadastro Usuário</string>
    <string name="title_perfil_usuario">Perfil Usuário</string>
    <string name="title_store">Denúncia</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client_id">"KEY"</string>


    <string name="select_category">Escolha a categoria</string>
    <string name="enter_quantity">Quantidade</string>
    <string name="unit_litre">Litros</string>
    <string name="unit_kg">Kg</string>
    <string name="unit_unit">Unidade</string>
    <string name="add_item">Adicionar Item</string>


    <string-array name="anos_array">
        <item>2024</item>
        <item>2023</item>
        <item>2022</item>
    </string-array>

    <string-array name="meses_array">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>
    </string-array>
</resources>
