<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobileNavigationView"
    app:startDestination="@+id/navigation_denuncia">

    <fragment
        android:id="@+id/navigation_denuncia"
        android:name="com.ifpr.app_reuse.ui.denuncia.DenunciaFragment"
        android:label="@string/title_denuncia"
        tools:layout="@layout/fragment_denuncia" />

    <fragment
        android:id="@+id/navigation_pesquisar"
        android:name="com.ifpr.app_reuse.ui.pesquisa.PesquisaFragment"
        android:label="@string/title_pesquisar"
        tools:layout="@layout/fragment_pesquisa" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.ifpr.app_reuse.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_perfil_usuario"
        android:name="com.ifpr.app_reuse.ui.usuario.PerfilUsuarioFragment"
        android:label="@string/title_perfil_usuario"
        tools:layout="@layout/activityt_cadastro_usuario" />
</navigation>