<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_200"
    tools:context=".ui.denuncia.ColetaSeletivaFragment">

    <TextView
        android:id="@+id/text_denuncia_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:background="@color/green_500"
        android:text="Solicitação de Coleta"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_coleta"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Itens Reciclavéis Photo"
        android:scaleType="centerCrop"
        android:src="@android:drawable/gallery_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_denuncia_title" />

    <Button
        android:id="@+id/button_select_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Selecionar Imagem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_coleta" />

    <EditText
        android:id="@+id/edit_text_coleta_titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="Titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_select_image" />

    <LinearLayout
        android:id="@+id/linearEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_coleta_titulo">

        <EditText
            android:id="@+id/edit_text_coleta_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Endereço" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_text_coleta_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Descrição"
        android:inputType="textMultiLine"
        android:minLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearEndereco" />

    <LinearLayout
        android:id="@+id/itensAdicionadosLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_coleta_descricao"
        app:layout_constraintBottom_toTopOf="@id/button_register_coleta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/item_categories"
            android:prompt="@string/select_category" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_quantity"
                android:inputType="number" />

            <RadioGroup
                android:id="@+id/radioGroupUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonLitro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_litre" />

                <RadioButton
                    android:id="@+id/radioButtonKg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_kg" />

                <RadioButton
                    android:id="@+id/radioButtonUnidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit_unit" />
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/buttonAddItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_item" />

        <ListView
            android:id="@+id/listViewItems"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:dividerHeight="1dp"
            android:scrollbars="vertical" />
    </LinearLayout>

    <Button
        android:id="@+id/button_register_coleta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Enviar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
